--- a/landing.html
+++ b/landing.html
@@ -147,9 +147,16 @@
 
     <div class="row">
       <div class="col-md-offset-1 col-md-4">
+        <img src="assets/images/send-videos-quickly.png" class="img responsive">
       </div>
-      
-      <div class="col-md-offset-2 col-md-4"></div>
+
+      <div class="col-md-offset-2 col-md-4">
+        <h2>Send videos quickly
+        </h2>
+          <p>Send your entire wedding video to family with a simple link. It’s easy to share large files with anyone — even if they don’t have a Filebox account.
+          </p>  
+      </div>
+
     </div>
     <div class="row">
       <div class="col-md-offset-1 col-md-4"></div>
