--- a/landing.html
+++ b/landing.html
@@ -154,24 +154,45 @@
         <h2>Send videos quickly
         </h2>
           <p>Send your entire wedding video to family with a simple link. It’s easy to share large files with anyone — even if they don’t have a Filebox account.
-          </p>  
+          </p>
       </div>
 
     </div>
     <div class="row">
-      <div class="col-md-offset-1 col-md-4"></div>
-      <div class="col-md-offset-2 col-md-4"></div>
+      <div class="col-md-offset-1 col-md-4">
+      <h2>Keep your photos safe</h2>
+        <p>Back up vacation photos automatically from your phone or computer. That way, memories are safe as soon as you make them, and you can relive them from any device.
+        </p>
+      </div>
+      <div class="col-md-offset-2 col-md-4">
+        <img src="assets/images/keep-your-photos-safe.png" class="img responsive">
+      </div>
     </div>
+
     <div class="row">
-      <div class="col-md-offset-1 col-md-4"></div>
-      <div class="col-md-offset-2 col-md-4"></div>
+      <div class="col-md-offset-1 col-md-4">
+        <img src="assets/images/work-on-slides-together.png" class="img responsive">
+      </div>
+      <div class="col-md-offset-2 col-md-4">
+      <h2>Work on slides together</h2>
+        <p>Edit a presentation with teammates without emailing files back and forth. When you edit a file in a shared folder, everyone gets the update automatically.</p>
+      </div>
     </div>
+
     <div class="row">
-      <div class="col-md-offset-1 col-md-4"></div>
-      <div class="col-md-offset-2 col-md-4"></div>
+      <div class="col-md-offset-1 col-md-4">
+      <h2>Never lose a file again</h2>
+        <p>Left your phone on the train? Your photos, docs, and videos are safe. Just sign in to Filebox from any device, and your files will be there waiting for you.</p>
+      </div>
+      <div class="col-md-offset-2 col-md-4">
+        <img src="assets/images/never-lose-a-file-again.png" class="img responsive">
+      </div>
     </div>
+
     <div class="row">
-      <div class="col-md-offset-4 col-md-4"></div>
+      <div class="col-md-offset-4 col-md-4">
+        
+      </div>
     </div>
     <div class="row">
       <div class="col-md-2"></div>
