--- a/landing.html
+++ b/landing.html
@@ -28,13 +28,13 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,300italic,400italic,600italic,700italic,800,800italic' rel='stylesheet' type='text/css'>
 
   <style>
-    .row{
-      border: thin red solid;
-    }
+  .row{
+    border: thin red solid;
+  }
 
-    img, form, h1, h2, p{
-      border: thin green solid;
-    }
+  img, form, h1, h2, p{
+    border: thin green solid;
+  }
 
   </style>
 
@@ -153,14 +153,14 @@
       <div class="col-md-offset-2 col-md-4">
         <h2>Send videos quickly
         </h2>
-          <p>Send your entire wedding video to family with a simple link. It’s easy to share large files with anyone — even if they don’t have a Filebox account.
-          </p>
+        <p>Send your entire wedding video to family with a simple link. It’s easy to share large files with anyone — even if they don’t have a Filebox account.
+        </p>
       </div>
 
     </div>
     <div class="row">
       <div class="col-md-offset-1 col-md-4">
-      <h2>Keep your photos safe</h2>
+        <h2>Keep your photos safe</h2>
         <p>Back up vacation photos automatically from your phone or computer. That way, memories are safe as soon as you make them, and you can relive them from any device.
         </p>
       </div>
@@ -174,24 +174,44 @@
         <img src="assets/images/work-on-slides-together.png" class="img responsive">
       </div>
       <div class="col-md-offset-2 col-md-4">
-      <h2>Work on slides together</h2>
+        <h2>Work on slides together</h2>
         <p>Edit a presentation with teammates without emailing files back and forth. When you edit a file in a shared folder, everyone gets the update automatically.</p>
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-offset-1 col-md-4">
-      <h2>Never lose a file again</h2>
+        <h2>Never lose a file again</h2>
         <p>Left your phone on the train? Your photos, docs, and videos are safe. Just sign in to Filebox from any device, and your files will be there waiting for you.</p>
       </div>
       <div class="col-md-offset-2 col-md-4">
         <img src="assets/images/never-lose-a-file-again.png" class="img responsive">
       </div>
     </div>
-
     <div class="row">
       <div class="col-md-offset-4 col-md-4">
-        
+        <h2 class="text-center">Get started now</h2>
+
+        <form>
+          <div class="form-group">
+            <!-- <label for="exampleInputPassword1">Password</label> -->
+            <input type="full name" class="form-control" id="exampleInputFulllName1" placeholder="Full Name">
+          </div>
+          <div class="form-group">
+            <!-- <label for="exampleInputEmail1">Email address</label> -->
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <!-- <label for="exampleInputPassword1">Password</label> -->
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox">I agree to <a href="">Filebox terms</a>
+            </label>
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
       </div>
     </div>
     <div class="row">
