--- a/landing.html
+++ b/landing.html
@@ -207,7 +207,8 @@
               <input type="checkbox">I agree to <a href="">Filebox terms</a>
             </label>
           </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="button" class="btn btn-primary btn-md btn-block">Sign up for free</button>
+          <button type="button" class="btn btn-primary btn-md btn-block"><i class="fa fa-google" aria-hidden="true"></i> Sign up for free with Google</button>
         </form>
       </div>
     </div>
