--- a/landing.html
+++ b/landing.html
@@ -102,36 +102,40 @@
     </div>
     <div class="row">
       <div class="col-md-offset-1 col-md-4">
-        <h1> Filebox works the way you do.
+        <h1> Filebox works the way you do
         </h1>
         <p>
           Get to all your files from anywhere, on any device, and share them with anyone.
         </p>
       </div>
       <div class="col-md-offset-2 col-md-4">
+        <h2 class="text-center">Get started now</h2>
         <form>
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
+            <input type="full name" class="form-control" id="exampleInputFulllName1" placeholder="Full Name">
+          </div>
+          <div class="form-group">
             <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputFile">File input</label>
-            <input type="file" id="exampleInputFile">
-            <p class="help-block">Example block-level help text here.</p>
           </div>
           <div class="checkbox">
             <label>
-              <input type="checkbox"> Check me out
+              <input type="checkbox">I agree to <a href="">Filebox terms</a>
             </label>
           </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="button" class="btn btn-primary btn-md btn-block">Sign up for free</button>
+          <hr></hr>
+          <button type="button" class="btn btn-primary btn-md btn-block"><i class="fa fa-google" aria-hidden="true"></i> Sign up for free with Google</button>
         </form>
       </div>
     </div>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
     <div class="row">
       <div class="col-md-offset-1 col-md-4">
         <h2>Take your docs anywhere
@@ -144,7 +148,10 @@
         <img src="assets/images/docs-anywhere.png" class="img-responsive">
       </div>
     </div>
-
+  </br>
+  </br>
+  </br>
+  </br>
     <div class="row">
       <div class="col-md-offset-1 col-md-4">
         <img src="assets/images/send-videos-quickly.png" class="img responsive">
@@ -156,8 +163,11 @@
         <p>Send your entire wedding video to family with a simple link. It’s easy to share large files with anyone — even if they don’t have a Filebox account.
         </p>
       </div>
-
     </div>
+  </br>
+  </br>
+  </br>
+  </br>
     <div class="row">
       <div class="col-md-offset-1 col-md-4">
         <h2>Keep your photos safe</h2>
@@ -168,7 +178,10 @@
         <img src="assets/images/keep-your-photos-safe.png" class="img responsive">
       </div>
     </div>
-
+  </br>
+  </br>
+  </br>
+  </br>
     <div class="row">
       <div class="col-md-offset-1 col-md-4">
         <img src="assets/images/work-on-slides-together.png" class="img responsive">
@@ -178,7 +191,10 @@
         <p>Edit a presentation with teammates without emailing files back and forth. When you edit a file in a shared folder, everyone gets the update automatically.</p>
       </div>
     </div>
-
+  </br>
+  </br>
+  </br>
+  </br>
     <div class="row">
       <div class="col-md-offset-1 col-md-4">
         <h2>Never lose a file again</h2>
@@ -188,6 +204,8 @@
         <img src="assets/images/never-lose-a-file-again.png" class="img responsive">
       </div>
     </div>
+  </br>
+  </br>
     <div class="row">
       <div class="col-md-offset-4 col-md-4">
         <h2 class="text-center">Get started now</h2>
@@ -208,17 +226,43 @@
             </label>
           </div>
           <button type="button" class="btn btn-primary btn-md btn-block">Sign up for free</button>
+          <hr></hr>
           <button type="button" class="btn btn-primary btn-md btn-block"><i class="fa fa-google" aria-hidden="true"></i> Sign up for free with Google</button>
         </form>
       </div>
     </div>
+
     <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-2"></div>
-      <div class="col-md-2"></div>
-      <div class="col-md-2"></div>
-      <div class="col-md-2"></div>
-      <div class="col-md-2"></div>
+      <div class="col-md-2">
+        <h4>Filebox</h4>
+        <p>Desktop app</br> Mobile apps</br> Plans</br> Security</p>
+      </div>
+
+      <div class="col-md-2">
+        <h4>Company</h4>
+        <p>About us</br> Jobs</br> Press</br> Blog</p>
+      </div>
+
+      <div class="col-md-2">
+        <h4>Support</h4>
+        <p>Help Center</br> Get started</br> Contact</br> Privacy & terms</p>
+      </div>
+
+      <div class="col-md-2">
+        <h4>Community</h4>
+        <p>Developers</br> Referrals</br> Forum</br>
+      </div>
+
+      <div class="col-md-2">
+        <h4>Connect</h4>
+        <p>Twitter</br> Facebook</br> Google+</br> Youtube</p>
+      </div>
+
+      <div class="col-md-2">
+        <h4>Products</h4>
+        <p>Pro</br> Business</br> Enterprise</p>
+      </div>
+
     </div>
   </div>
 </body>
