--- a/landing.html
+++ b/landing.html
@@ -74,13 +74,15 @@
           </ul>
         </li>
       </ul>
+      <!-- modify to position and read as "Try Filebox Business" -->
       <form class="navbar-form navbar-left">
-        <div class="form-group">
+        <!-- <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        </div> -->
+        <a href="">Sign in
+        <button type="submit" class="btn btn-default">Try Filebox Business</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
+      <!-- <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -91,7 +93,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
           </ul>
-        </li>
+        </li> -->
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
