--- a/landing.html
+++ b/landing.html
@@ -40,20 +40,20 @@
 
 </head>
 <body>
-  <div class="container">
+<div class="container">
 <!-- insert nav bar -->
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><i class="fa fa-dropbox" aria-hidden="true"></i> Filebox</a>
+      <a class="navbar-brand" href="#"><i class="fa fa-dropbox" style="font-size:24px;" aria-hidden="true"></i> Filebox</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -68,23 +68,25 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
+  </br>
+  </br>
 <!-- row 1 -->
     <div class="row">
       <div class="col-md-offset-1 col-md-10">
         <img src="assets/images/hero.png" class="img-reponsive">
       </div>
     </div>
+  </br>
     <div class="row">
       <div class="col-md-offset-1 col-md-4">
-        <h1> Filebox works the way you do
+        <h1>Filebox works the way you do
         </h1>
         <p>
           Get to all your files from anywhere, on any device, and share them with anyone.
         </p>
       </div>
       <div class="col-md-offset-2 col-md-4">
-        <h2 class="text-center">Get started now</h2>
+        <!-- <h2 class="text-center">Get started now</h2> -->
         <form>
           <div class="form-group">
             <input type="full name" class="form-control" id="exampleInputFulllName1" placeholder="Full Name">
@@ -206,7 +208,16 @@
         </form>
       </div>
     </div>
-
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
     <div class="row">
       <div class="col-md-2">
         <h4>Filebox</h4>
