--- a/landing.html
+++ b/landing.html
@@ -36,7 +36,7 @@
     border: thin green solid;
   }
 
-  </style>
+</style>
 
 </head>
 <body>
@@ -58,12 +58,12 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <form class="navbar-form navbar-right">
-          <button type="submit" class="btn btn-default">Try Filebox Business</button>
-      </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Download the app</a></li>
         <li><a href="#">Sign in</a></li>
+        <li><form class="navbar-form">
+              <button type="submit" class="btn btn-default">Try Filebox Business</button>
+            </form></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
